# samgraphko

./: Cargo.toml
src/: egui_app.rs  gen_graph.rs  main.rs  test_sandbox.rs
src/egui_app/: gui_components.rs
src/egui_app/gui_components/: graph_canvas.rs  mod.rs
src/gen_graph/: attrs.rs  perm_attrs.rs  temp_attrs.rs
