[package]
name = "samgraphko"
version = "0.1.0"
authors = ["Samuel Selleck <?>", "Kåre von Geijer <Kare.kvg@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.61"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
nalgebra = "0.31.3"

# From eframe_template:
# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
